crates/mineral-tui/src/components/layout/browse/snapshots/lyrics_compact_gap_override_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/lyrics.rs
description: "歌词:脚本覆盖 compact_line_gap=1 → 行间垫空行"
expression: t.backend()
---
"╭ lyrics · synced ──────────────────────────────────────── [t] ╮"
"│      地上へ出ると 煩（うるさ）いくらいの散光が僕を責めた     │" Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " ")]
"│                                                              │"
"│                    深く 深く  潜ったままの                   │" Hidden by multi-width symbols: [(22, " "), (24, " "), (27, " "), (29, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " ")]
"│                                                              │"
"│                     僕の声を 抱えて歩いた                    │" Hidden by multi-width symbols: [(23, " "), (25, " "), (27, " "), (29, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " ")]
"│                                                              │"
"│           太陽にあぶり出される  僕の孤独のカタチが           │" Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
"│                                                              │"
"│                後ずさりするように  影になった                │" Hidden by multi-width symbols: [(18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " ")]
"│                                                              │"
"│            眩しすぎる正しさで 僕へと照りつけないで           │" Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
"│                                                              │"
"╰──────────────────────────────────────────────────────────────╯"
