crates/mineral-tui/src/components/layout/browse/snapshots/lyrics_lrc_with_romanization_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/lyrics.rs
description: "歌词:行级 + 罗马音副行"
expression: t.backend()
---
"╭ lyrics · synced ─────────────────────────────────── ro · [t] ╮"
"│      地上へ出ると 煩（うるさ）いくらいの散光が僕を責めた     │" Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " ")]
"│chi jo u e de ru to ha n u ru sa ) i ku ra i no sa n ko u ga b│"
"│                    深く 深く  潜ったままの                   │" Hidden by multi-width symbols: [(22, " "), (24, " "), (27, " "), (29, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " ")]
"│             fu ka ku fu ka ku  mo gu tta ma ma no            │"
"│                     僕の声を 抱えて歩いた                    │" Hidden by multi-width symbols: [(23, " "), (25, " "), (27, " "), (29, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " ")]
"│             bo ku no ko e wo ka ka e te a ru i ta            │"
"│           太陽にあぶり出される  僕の孤独のカタチが           │" Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
"│ta i yo u ni a bu ri da sa re ru  bo ku no ko do ku no ka ta c│"
"│                後ずさりするように  影になった                │" Hidden by multi-width symbols: [(18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " ")]
"│         a to zu sa ri su ru yo u ni  ka ge ni na tta         │"
"│            眩しすぎる正しさで 僕へと照りつけないで           │" Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
"│ma bu shi su gi ru ta da shi sa de bo ku e to te ri tsu ke na │"
"╰──────────────────────────────────────────────────────────────╯"
