crates/mineral-tui/src/components/layout/browse/snapshots/lyrics_substituted_broken_goes_static_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/lyrics.rs
description: "歌词:顶换流时长失真 → 放弃同步(静态篇首 + unsynced 标识)"
expression: t.backend()
---
"╭ lyrics · unsynced ────────────────────────────────────── [t] ╮"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"│         地下鉄の窓に  急に映る顔が じっとこっちを見る        │" Hidden by multi-width symbols: [(11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " ")]
"│   そのひどく不安気な目を 逸らすことも出来ず立ち尽くしていた  │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " ")]
"│              耳の奥で  後ろ指さす声がこだまする              │" Hidden by multi-width symbols: [(16, " "), (18, " "), (20, " "), (22, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " ")]
"│ ああ  僕が僕であろうとすればするほど 厭う声は大きくなるみたい│" Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " "), (62, " ")]
"│           「ねえ 僕はあのときどうすればよかった？」          │" Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " ")]
"│ わからない  わからないまま チクチクと時間だけがただ過ぎていく│" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " "), (62, " ")]
"╰──────────────────────────────────────────────────────────────╯"
