crates/mineral-tui/src/components/layout/browse/snapshots/spectrum_with_audio_full_width_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/spectrum.rs
description: "频谱有音频(mock bars,占满宽度有起伏)"
expression: terminal.backend()
---
"╭ spectrum ────────────────────────────────────────────────────────────────────╮"
"│                       ▁                      ▔                          ▁    │"
"│       ▁   ▃   ▅   ▇   █      ▔   ▂   ▄   ▆   █          ▁   ▃   ▅   ▇   █    │"
"│   ▇   █   █  ▔█  ▂█  ▄█  ▆   █   █   █  ▁█  ▃█  ▅   ▇   █   █  ▔█  ▂█  ▄█  ▆ │"
"│  ▂█  ▄█  ▆█  ██  ██  ██ ▁█  ▃█  ▅█  ▇█  ██  ██ ▔█  ▂█  ▄█  ▆█  ██  ██  ██ ▁█ │"
"│  ██  ██ ▁██ ▃██ ▅██ ▇██ ██  ██ ▔██ ▂██ ▄██ ▆██ ██  ██  ██ ▁██ ▃██ ▅██ ▇██ ██ │"
"│ ▅██ ▇██ ███ ███▔███▂███▄██ ▆██ ███ ███ ███▁███▃██ ▅██ ▇██ ███ ███▔███▂███▄██ │"
"│▔███▂███▄███▆██████████████▁███▃███▅███▇██████████▔███▂███▄███▆██████████████▁│"
"│██████████████████████████████████████████████████████████████████████████████│"
"╰──────────────────────────────────────────────────────────────────────────────╯"
